--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,17 @@ h1 {
 text-align: center;
 }
 
+h3 {
+  margin-left: 10px;
+}
+
+p {
+  margin: 10px;
+}
 .question-number {
   text-align: end;
   color: #F26E50; 
+  margin: 10px;
 }
 
 ul {
@@ -53,6 +61,7 @@ li:hover {
 
 button {
   margin-top: 20px;
+  margin-left: 10px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
@@ -73,6 +82,7 @@ img {
   max-width: 70%;
   height: auto;
   border: 4px solid #D2BBF2;
+  margin-left: 10px;
 }
 
 @media (min-width: 675px) {
