--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ li:hover {
 button {
   margin-top: 20px;
   margin-left: auto; /* Automatically adjust the left margin */
+  margin-right: 10px;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
