--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,9 @@ h1 {
 text-align: center;
 }
 
-h2 {
-  margin-left: 10px;
-  }
-
 h3 {
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 p {
@@ -90,6 +87,7 @@ img {
   height: auto;
   border: 4px solid #D2BBF2;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media (min-width: 675px) {
